--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+title: IBI
+description: My name is Du Xinyang. I am an IBI1 student at ZJU-UoE institute, Zhejiang University.
