--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: IBI
-description: My name is Du Xinyang. I am an IBI1 student at ZJU-UoE institute, Zhejiang University.
+description: My name is Du Xinyang. I am an IBI1 student at ZJU-UoE institute, Zhejiang University.I like studying very much.
