--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pages-themes/hacker@v0.2.0
 title: IBI
-description: My name is Du Xinyang. I am an IBI1 student at ZJU-UoE institute, Zhejiang University.I like GOING OUT TO PLAY VERY MUCH.Welcome to my github!
+description: My name is Du Xinyang. I was born in 2004. I am an IBI1 student at ZJU-UoE institute, Zhejiang University.I like GOING OUT TO PLAY VERY MUCH.Welcome to my github!
